feat(team-service): add K8s manifests, observability stack, and GitHub Actions CI
- K8s: Deployment, Service, ConfigMap, Secret template (secret.yaml gitignored),
  dev-deps (Postgres, Redis, KRaft Kafka with enableServiceLinks fix)
- Infra: Prometheus, Loki, Tempo, Promtail, Grafana pre-wired datasources;
  deploy-all.sh with SKIP_DEV_DEPS / SKIP_OBSERVABILITY flags
- CI: .github/workflows/team-service-ci.yml — mvn verify (Jacoco 80% gate)
  + GHCR image push on main merge (sha-<7> + latest tags, BuildKit GHA cache)
- Security: root .gitignore blocking .env and k8s/secret.yaml repo-wide;
  JWT secret scrubbed from secret.yaml template
- Fixes: Dockerfile -Dmaven.test.skip=true, SecurityConfig actuator wildcards,
  InvitationMapperTest record arity, ConfigMap SPRING_SQL_INIT_MODE=never